crates/reinhardt-core/macros/tests/ui/injectable/fail/no_attribute.stderr
error: Field must have either #[inject] or #[no_inject] attribute. Use #[inject] for dependency injection, or #[no_inject] for default initialization.
  --> tests/ui/injectable/fail/no_attribute.rs:25:2
   |
25 |     db: Database, // Error: must have #[inject] or #[no_inject]
   |     ^^^^^^^^^^^^
